==> CarryLiao5959/xiuos/Ubiquitous/RT-Thread_Fusion_XiUOS/aiit_board/aiit-arm32-board/board/ch438.c <==
#include <rtthread.h>
#include <rtdevice.h>
#include "ch438.h"
#include <math.h>

void CH438_INIT(void)
{	
    CH438_set_output();
    rt_pin_mode(CH438_NWR_PIN, PIN_MODE_OUTPUT);
    rt_pin_mode(CH438_NRD_PIN, PIN_MODE_OUTPUT);
    rt_pin_mode(CH438_NCS_PIN, PIN_MODE_OUTPUT);
    rt_pin_mode(CH438_ALE_PIN, PIN_MODE_OUTPUT);
    rt_pin_mode(DIR_485CH1_PIN, PIN_MODE_OUTPUT);
    rt_pin_mode(DIR_485CH2_PIN, PIN_MODE_OUTPUT);
    rt_pin_mode(DIR_485CH3_PIN, PIN_MODE_OUTPUT);
    rt_pin_mode(CH438_INT_PIN, PIN_MODE_INPUT_PULLUP);

    rt_pin_write(CH438_NWR_PIN, PIN_HIGH);
    rt_pin_write(CH438_NRD_PIN, PIN_HIGH);
    rt_pin_write(CH438_NCS_PIN, PIN_HIGH);
    rt_pin_write(CH438_ALE_PIN, PIN_HIGH);
}

static void CH438_set_output(void)
{
    rt_pin_mode(CH438_D0_PIN, PIN_MODE_OUTPUT);
    rt_pin_mode(CH438_D1_PIN, PIN_MODE_OUTPUT);
    rt_pin_mode(CH438_D2_PIN, PIN_MODE_OUTPUT);
    rt_pin_mode(CH438_D3_PIN, PIN_MODE_OUTPUT);
    rt_pin_mode(CH438_D4_PIN, PIN_MODE_OUTPUT);
    rt_pin_mode(CH438_D5_PIN, PIN_MODE_OUTPUT);
    rt_pin_mode(CH438_D6_PIN, PIN_MODE_OUTPUT);
    rt_pin_mode(CH438_D7_PIN, PIN_MODE_OUTPUT);  
}

static void CH438_set_input(void)
{
    rt_pin_mode(CH438_D0_PIN, PIN_MODE_INPUT_PULLUP);
    rt_pin_mode(CH438_D1_PIN, PIN_MODE_INPUT_PULLUP);
    rt_pin_mode(CH438_D2_PIN, PIN_MODE_INPUT_PULLUP);
    rt_pin_mode(CH438_D3_PIN, PIN_MODE_INPUT_PULLUP);
    rt_pin_mode(CH438_D4_PIN, PIN_MODE_INPUT_PULLUP);
    rt_pin_mode(CH438_D5_PIN, PIN_MODE_INPUT_PULLUP);
    rt_pin_mode(CH438_D6_PIN, PIN_MODE_INPUT_PULLUP);
    rt_pin_mode(CH438_D7_PIN, PIN_MODE_INPUT_PULLUP);
}

void set_485_input(rt_uint8_t ch_no)
{
	if(ch_no == 1) {
        rt_pin_write(DIR_485CH1_PIN, PIN_LOW);
    }

    if(ch_no == 2) {
        rt_pin_write(DIR_485CH2_PIN, PIN_LOW);
    }

    if(ch_no == 3) {
        rt_pin_write(DIR_485CH3_PIN, PIN_LOW);
    }		
}

void set_485_output(rt_uint8_t ch_no)
{
	if(ch_no == 1) {
        rt_pin_write(DIR_485CH1_PIN, PIN_HIGH);
    }

    if(ch_no == 2) {
        rt_pin_write(DIR_485CH2_PIN, PIN_HIGH);
    }

    if(ch_no == 3) {
        rt_pin_write(DIR_485CH3_PIN, PIN_HIGH);
    }
}

rt_uint8_t ReadCH438Data( rt_uint8_t addr )
{
    rt_uint8_t dat = 0;
    rt_pin_write(CH438_NWR_PIN, PIN_HIGH);
    rt_pin_write(CH438_NRD_PIN, PIN_HIGH);
    rt_pin_write(CH438_ALE_PIN, PIN_HIGH);
    rt_pin_write(CH438_NCS_PIN, PIN_HIGH);

    CH438_set_output();
    CH438_udelay(1);

    if(addr &0x80)	rt_pin_write(CH438_D7_PIN,PIN_HIGH);	else	rt_pin_write(CH438_D7_PIN,PIN_LOW);	
    if(addr &0x40)	rt_pin_write(CH438_D6_PIN,PIN_HIGH);	else	rt_pin_write(CH438_D6_PIN,PIN_LOW);	
    if(addr &0x20)	rt_pin_write(CH438_D5_PIN,PIN_HIGH);	else	rt_pin_write(CH438_D5_PIN,PIN_LOW);	
    if(addr &0x10)	rt_pin_write(CH438_D4_PIN,PIN_HIGH);	else	rt_pin_write(CH438_D4_PIN,PIN_LOW);	
    if(addr &0x08)	rt_pin_write(CH438_D3_PIN,PIN_HIGH);	else	rt_pin_write(CH438_D3_PIN,PIN_LOW);	
    if(addr &0x04)	rt_pin_write(CH438_D2_PIN,PIN_HIGH);	else	rt_pin_write(CH438_D2_PIN,PIN_LOW);	
    if(addr &0x02)	rt_pin_write(CH438_D1_PIN,PIN_HIGH);	else	rt_pin_write(CH438_D1_PIN,PIN_LOW);	
    if(addr &0x01)	rt_pin_write(CH438_D0_PIN,PIN_HIGH);	else	rt_pin_write(CH438_D0_PIN,PIN_LOW);	
      
    CH438_udelay(1);

    rt_pin_write(CH438_ALE_PIN,PIN_LOW);	
    CH438_udelay(1);		
    rt_pin_write(CH438_NCS_PIN, PIN_LOW);
    CH438_udelay(1);	

    CH438_set_input();
    CH438_udelay(1);

    rt_pin_write(CH438_NRD_PIN,PIN_LOW);	
    CH438_udelay(1);	

    if (rt_pin_read(CH438_D7_PIN))	dat |= 0x80;
    if (rt_pin_read(CH438_D6_PIN))	dat |= 0x40;
    if (rt_pin_read(CH438_D5_PIN))	dat |= 0x20;
    if (rt_pin_read(CH438_D4_PIN))	dat |= 0x10;
    if (rt_pin_read(CH438_D3_PIN))	dat |= 0x08;
    if (rt_pin_read(CH438_D2_PIN))	dat |= 0x04;
    if (rt_pin_read(CH438_D1_PIN))	dat |= 0x02;
    if (rt_pin_read(CH438_D0_PIN))	dat |= 0x01;

    rt_pin_write(CH438_NRD_PIN,PIN_HIGH);	
    rt_pin_write(CH438_ALE_PIN,PIN_HIGH);	
    rt_pin_write(CH438_NCS_PIN,PIN_HIGH);
    CH438_udelay(1);

    return dat;
}

static void WriteCH438Data( rt_uint8_t addr, char dat )
{
    rt_pin_write(CH438_ALE_PIN, PIN_HIGH);
    rt_pin_write(CH438_NWR_PIN, PIN_HIGH);
    rt_pin_write(CH438_NRD_PIN, PIN_HIGH);
    rt_pin_write(CH438_NCS_PIN, PIN_HIGH);

    CH438_set_output();
    CH438_udelay(1);	

    if(addr &0x80)	rt_pin_write(CH438_D7_PIN,PIN_HIGH);	else	rt_pin_write(CH438_D7_PIN,PIN_LOW);	
    if(addr &0x40)	rt_pin_write(CH438_D6_PIN,PIN_HIGH);	else	rt_pin_write(CH438_D6_PIN,PIN_LOW);	
    if(addr &0x20)	rt_pin_write(CH438_D5_PIN,PIN_HIGH);	else	rt_pin_write(CH438_D5_PIN,PIN_LOW);	
    if(addr &0x10)	rt_pin_write(CH438_D4_PIN,PIN_HIGH);	else	rt_pin_write(CH438_D4_PIN,PIN_LOW);	
    if(addr &0x08)	rt_pin_write(CH438_D3_PIN,PIN_HIGH);	else	rt_pin_write(CH438_D3_PIN,PIN_LOW);	
    if(addr &0x04)	rt_pin_write(CH438_D2_PIN,PIN_HIGH);	else	rt_pin_write(CH438_D2_PIN,PIN_LOW);	
    if(addr &0x02)	rt_pin_write(CH438_D1_PIN,PIN_HIGH);	else	rt_pin_write(CH438_D1_PIN,PIN_LOW);	
    if(addr &0x01)	rt_pin_write(CH438_D0_PIN,PIN_HIGH);	else	rt_pin_write(CH438_D0_PIN,PIN_LOW);	

    CH438_udelay(1);	

    rt_pin_write(CH438_ALE_PIN,PIN_LOW);	
    CH438_udelay(1);
    rt_pin_write(CH438_NCS_PIN, PIN_LOW);
    CH438_udelay(1);

    if(dat &0x80)	rt_pin_write(CH438_D7_PIN,PIN_HIGH);	else	rt_pin_write(CH438_D7_PIN,PIN_LOW);	
    if(dat &0x40)	rt_pin_write(CH438_D6_PIN,PIN_HIGH);	else	rt_pin_write(CH438_D6_PIN,PIN_LOW);	
    if(dat &0x20)	rt_pin_write(CH438_D5_PIN,PIN_HIGH);	else	rt_pin_write(CH438_D5_PIN,PIN_LOW);	
    if(dat &0x10)	rt_pin_write(CH438_D4_PIN,PIN_HIGH);	else	rt_pin_write(CH438_D4_PIN,PIN_LOW);	
    if(dat &0x08)	rt_pin_write(CH438_D3_PIN,PIN_HIGH);	else	rt_pin_write(CH438_D3_PIN,PIN_LOW);	
    if(dat &0x04)	rt_pin_write(CH438_D2_PIN,PIN_HIGH);	else	rt_pin_write(CH438_D2_PIN,PIN_LOW);	
    if(dat &0x02)	rt_pin_write(CH438_D1_PIN,PIN_HIGH);	else	rt_pin_write(CH438_D1_PIN,PIN_LOW);	
    if(dat &0x01)	rt_pin_write(CH438_D0_PIN,PIN_HIGH);	else	rt_pin_write(CH438_D0_PIN,PIN_LOW);	

    CH438_udelay(1);	

    rt_pin_write(CH438_NWR_PIN,PIN_LOW);	
    CH438_udelay(1);	

    rt_pin_write(CH438_NWR_PIN,PIN_HIGH);	
    rt_pin_write(CH438_ALE_PIN,PIN_HIGH);	
    rt_pin_write(CH438_NCS_PIN,PIN_HIGH);
    CH438_udelay(1);	

    CH438_set_input();

    return;
}

static rt_err_t extuart_control(struct rt_serial_device *serial, int cmd, void *arg)
{
    static rt_uint16_t register_flag = 0;

    switch (cmd)
    {
    case RT_DEVICE_CTRL_CLR_INT:
        if(1 == register_flag)
        {
            rt_pin_irq_enable(CH438_INT_PIN, PIN_IRQ_DISABLE);
            register_flag = 0;
        }
        break;
    case RT_DEVICE_CTRL_SET_INT:
        if(0 == register_flag)
        { 
            rt_pin_mode(CH438_INT_PIN, PIN_MODE_INPUT_PULLUP);
            rt_pin_attach_irq(CH438_INT_PIN, PIN_IRQ_MODE_FALLING, CH438Irq, (void *)serial);
            rt_pin_irq_enable(CH438_INT_PIN, PIN_IRQ_ENABLE);
            register_flag = 1;
        }
        break;
    }
    return (RT_EOK);
}
